conformance/base/baseline_tier/standard-egress-inline-cidr-rules.yaml
apiVersion: policy.networking.k8s.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: default
spec:
  tier: Baseline
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  egress:
  # CIDR rules that test allow to specific IPs is done within the test by updating the CR
  #- name: "allow-egress-to-specific-podIPs"
  #  action: "Accept"
  #  to:
  #  - networks:
  #    - luna-lovegood-0.IP
  #    - cedric-diggory-0.IP
  - name: "allow-egress-to-slytherin"
    action: "Accept"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  - name: "deny-egress-to-internet"
    action: "Deny"
    to:
    - networks:
        - 0.0.0.0/0
        - ::/0
